2000-09-22  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/com2.c (ravage): Allow for the bathing goddess.  From
	OpenBSD.

	* battlestar/extern.h: Add OBJ_PLURAL, objflags and
	is_plural_object.
	* battlestar/globals.c: Add objflags.
	* battlestar/com2.c (wearit), battlestar/com3.c (shoot),
	battlestar/com4.c (take, eat): Use is_plural_object rather than
	looking for a final 's'.
	* tests/battlestar.in31, tests/battlestar.out31: New test.
	* tests/battlestar.test: Update.

	* battlestar/com4.c (drop): When kicking, check for objects being
	worn or not present.  From OpenBSD.
	* tests/battlestar.in29, tests/battlestar.out29,
	tests/battlestar.in30, tests/battlestar.out30: New tests.
	* tests/battlestar.test: Update.

	* battlestar/com4.c (take): Check for the object not being present
	before checking for it being too heavy or bulky.
	* tests/battlestar.in28, tests/battlestar.out28: New test.
	* tests/battlestar.test: Update.

2000-09-21  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/cypher.c (cypher): Give appropriate messages for
	verbs applied to "all" where nothing relevant is present.  From
	OpenBSD.
	* tests/battlestar.in27, tests/battlestar.out27: New test.
	* tests/battlestar.test: Update.

	* battlestar/com2.c (wearit, use, murder), battlestar/com3.c
	(shoot), battlestar/com4.c (take, throw, drop, eat),
	battlestar/com6.c (dooropen), battlestar/cypher.c (cypher),
	battlestar/parse.c (parse): Move all discarding of adjectives to
	parse().  From Paul Janzen <pjanzen@foatdi.harvard.edu>.  Fixes
	crash on "carry old all", shown up by fuzz testing.
	* tests/battlestar.in26, tests/battlestar.out26: New test.
	* tests/battlestar.test: Update.

	* battlestar/com2.c (murder): Give error rather than crashing on
	"kill all".  From OpenBSD.
	* tests/battlestar.in25, tests/battlestar.out25: New test.
	* tests/battlestar.test: Update.

	* battlestar/extern.h: Define and use WORDLEN.  From OpenBSD.
	* battlestar/globals.c: Also use WORDLEN.  From OpenBSD.