@@ -1,5 +1,9 @@
 2000-09-22  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* battlestar/com5.c (love): Allow for bathing goddess; better
+	message when the lover is not present or for certain choices of
+	lover.
+
 	* battlestar/com2.c (ravage): Allow for the bathing goddess.  From
 	OpenBSD.
 
